modify egg to show breaking paths but need to determine desktop and mobile strategy for showing it, since it needs to show the whole size of the egg, cut off the shells in mobile but show in desktop after explosion, and also position correctly in an out in the center bottom of the image

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -37,6 +37,7 @@
 		width: 100%;
 		min-height: 40rem;
 		position: relative;
+		overflow: hidden;
 	}
 
 	form {
@@ -152,9 +153,13 @@
 #email-link {
 	width: 100%;
 
+	svg {
+		width: 800px;
+	}
+
 	#egg-hatcher {
 		transform: translateX(50px) scale(0);
-		transform-origin: bottom right;
+		transform-origin: bottom;
 	}
 
 	#chick {
